# docbase-deck

./: index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  Memo.tsx  app.tsx  conf.ts  main.tsx  memo.tsx  settings.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  docbase.rs  main.rs  settings.rs
