[package]
name = "docbase-deck"
version = "0.1.0"
description = "Organizing DocBase information using a tag-oriented approach."
authors = ["asonas"]
license = "MIT"
repository = "https://github.com/asonas/docbase-deck"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
directories = "5.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file", "path-all", "shell-open"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
